@@ -590,7 +590,7 @@ Use `defcustom' to keep value across sessions "
   "Return `t' if emacs major version is above 23"
   (< 23 (string-to-number (car (split-string emacs-version "\\.")))))
 
-(defun py-beginning-of-commented-section (&optional last)
+(defun py-beginning-of-comments (&optional last)
   "Leave upwards comments and/or empty lines. "
   (interactive)
   (let ((pps (syntax-ppss))
@@ -599,7 +599,7 @@ Use `defcustom' to keep value across sessions "
              (looking-back "^[ \t]*")(not (bobp)))
         (progn
           (skip-chars-backward " \t\r\n\f")
-          (py-beginning-of-commented-section last))
+          (py-beginning-of-comments last))
       (goto-char last))))
 
 (defun py--empty-arglist-indent (nesting py-indent-offset indent-offset)
@@ -753,7 +753,7 @@ LIEP stores line-end-position at point-of-interest
 			      (current-column)
 			    (if py-indent-comments
 				(progn
-				  (py-beginning-of-commented-section)
+				  (py-beginning-of-comments)
 				  (py-compute-indentation orig origline closing line nesting repeat indent-offset liep))
 			      0))
 			(forward-char -1)
@@ -767,7 +767,7 @@ LIEP stores line-end-position at point-of-interest
 			  ;; as previous comment-line might
 			  ;; be wrongly unindented, travel
 			  ;; whole commented section
-			  (py-beginning-of-commented-section)
+			  (py-beginning-of-comments)
 			  (py-compute-indentation orig origline closing line nesting repeat indent-offset liep))
 		      0))
 		   ((and (looking-at "[ \t]*#") (looking-back "^[ \t]*")(not
